# stellar-token-adiccello

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: contract.rs  test.rs
token/fungible/: Cargo.toml
token/fungible/src/: fungible.rs  lib.rs  storage.rs  test.rs
token/fungible/src/extensions/burnable/: mod.rs  storage.rs  test.rs
token/fungible/src/extensions/metadata/: mod.rs  storage.rs  test.rs
token/fungible/src/extensions/mintable/: mod.rs  storage.rs  test.rs
